--- a/PhotoGame/en.lproj/PhotoGameViewController.xib
+++ b/PhotoGame/en.lproj/PhotoGameViewController.xib
@@ -63,7 +63,7 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<int key="IBUIButtonType">1</int>
-								<string key="IBUINormalTitle">Start Game</string>
+								<string key="IBUINormalTitle">Play Game</string>
 								<object class="NSColor" key="IBUIHighlightedTitleColor" id="387127195">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -82,7 +82,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{72, 292}, {176, 24}}</string>
 								<reference key="NSSuperview" ref="806745557"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
